# postcrafter-nextjs/.next/server/pages/api/health.js
@@ -1,0 +1,1 @@
+"use strict";(()=>{var e={};e.id=837,e.ids=[837],e.modules={145:e=>{e.exports=require("next/dist/compiled/next-server/pages-api.runtime.prod.js")},638:(e,t,a)=>{a.r(t),a.d(t,{config:()=>u,default:()=>s,routeModule:()=>d});var r={};a.r(r),a.d(r,{default:()=>handler});var n=a(802),i=a(153),o=a(249);function handler(e,t){if("GET"!==e.method)return t.status(405).json({status:"error",timestamp:new Date().toISOString(),environment:"production"});t.status(200).json({status:"healthy",timestamp:new Date().toISOString(),environment:"production"})}let s=(0,o.l)(r,"default"),u=(0,o.l)(r,"config"),d=new n.PagesAPIRouteModule({definition:{kind:i.x.PAGES_API,page:"/api/health",pathname:"/api/health",bundlePath:"",filename:""},userland:r})}};var t=require("../../webpack-api-runtime.js");t.C(e);var __webpack_exec__=e=>t(t.s=e),a=t.X(0,[222],()=>__webpack_exec__(638));module.exports=a})();
